# triton

./: .gitignore  .gitmodules  CMakeLists.txt  ptx.cu
cmake/: DownloadLLVM.in
docker/: Dockerfile.triton_cuda  Dockerfile.triton_rocm
include/: print_helper.h  print_ir.h
include/triton/codegen/: target.h
include/triton/codegen/analysis/: swizzle.h
include/triton/driver/: backend_hip.h  buffer_hip.h  context_hip.h  device_hip.h  dispatch.h  dispatch_hip.h  error_hip.h  handle.h  handle_hip.h  kernel_hip.h  module_hip.h  platform_hip.h  stream_hip.h
include/triton/tools/: bench_hip.hpp
lib/codegen/: pass.cc  target.cc
lib/codegen/analysis/: layout.cc  swizzle.cc
lib/codegen/selection/: generator.cc
lib/codegen/transform/: membar.cc  peephole.cc  prefetch.cc
lib/driver/: backend_hip.cc  buffer_hip.cc  context_hip.cc  device_hip.cc  dispatch.cc  dispatch_hip.cc  error_hip.cc  handle_hip.cc  helper.h  kernel_hip.cc  module.cc  module_hip.cc  platform_hip.cc  stream_hip.cc
lib/lang/: token_hip.cc
lib/runtime/: function_hip.cc
python/: setup.py
python/src/: cutlass_hip.cc  triton_hip.cc
python/test/: test_add.py  test_basic.py  test_conv.py  test_empty.py
python/triton/: code_gen.py  kernel.py
python/triton/ops/: conv_hip.c  cross_entropy_hip.c  matmul_hip.c
python/triton/ops/blocksparse/: matmul_hip.c  softmax_hip.c
scripts/amd/: build.sh  clean.sh  delete_hip_files.sh  deps.sh  docker_build.sh  docker_run.sh  hipify.sh  run.sh  submodule_add.sh  test.sh
scripts/docker/: Dockerfile.triton_cuda
tutorials/: 01-matmul_hip.cc
